# VINTAGE_VESTIGE

./: .dockerignore  .env.example  .gitignore  Dockerfile  check_dataset.py  data_quality_categories.csv  data_quality_eras.csv  data_quality_platform_era.csv  data_quality_vibes.csv  generate_all_embeddings.py  pyproject.toml  requirements.txt  test_pipeline.py  test_search.py  unrecognized_eras.csv  vintage_vestige_ui_v2.html
.claude/: DEPLOY_PLAN.md  beg_session.md  create_docs.md  end_session.md  post_compaction.md  pre_compaction.md  settings.local.json  updates.md
_docs/: 03-14-26.md  API_SPEC.md  ARCHITECTURE.md  ARCHITECTURE_DIAGRAM.md  COMPUTE_BRIDGES_REFERENCE.md  DATA_INVENTORY.md  DECISIONS.md  DEPLOYMENT_PLAN.md  FIGMA_DESIGN_HANDOFF_V2.md  FRONTEND_REFACTOR_PLAN.md  PROJECT_STATE.md  SESSION_LOG.md  THREADPULL_V2_IMPLEMENTATION_PLAN.md  THREAD_PULL_DESIGN_DIRECTION.md  herothread.html
analysis/: bridge_queries.py  compute_bridges.py  generate_narratives.py  product_queries.py
api/: dependencies.py  main.py
docs/: API_SPEC.md  ARCHITECTURE.md  BRIDGE_VOCABULARY.md  DATA_INVENTORY.md  DECISIONS.md  DEPLOYMENT_PLAN.md  FIGMA_DESIGN_HANDOFF.md  FRONTEND_IMPLEMENTATION_PLAN.md  IIT_4.0_INTEGRATION_PLAN.md  NARRATIVE_GENERATION.md  PROJECT_STATE.md  SESSION_LOG.md
embeddings/: generate_image_embeddings.py  generator.py  models.py  rebuild_embeddings.py
enrichment/: backfill_culture.py  backfill_vibes.py  claude.py  enrich_and_reembed_all.py  enrich_async.py  enrich_batch.py  enrich_remaining.py  era_taxonomy.py  fashionpedia_taxonomy.py  (+2 more)
(+256 files in other folders)
