[project]
name = "vintage-vestige"
version = "0.1.0"
description = "AI-powered vintage fashion search engine"
requires-python = ">=3.13"

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "pytest-timeout>=2.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "unit: Fast tests with no external dependencies",
    "integration: Tests requiring live PostgreSQL and Qdrant",
    "slow: Long-running search quality and regression tests",
    "data_integrity: Tests validating cross-system data consistency",
]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
filterwarnings = [
    "ignore::DeprecationWarning:sentence_transformers.*",
    "ignore::FutureWarning:transformers.*",
]
